<resources>
    <string name="app_name">Movie Kaopiz</string>
    <string name="title_discover">Discover</string>
    <string name="title_genre">Genre</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_actor">Actor</string>
    <string name="title_setting">Setting</string>
    <string name="title_search">Search</string>
    <string name="text_coming_soon">Wait Function</string>


</resources>
